# web3-examples

./: .gitignore  README.md  package-lock.json  package.json
bitcoin/bitcoinjs-lib/: package.json
bitcoinjs-lib/: package-lock.json
bitcoinjs-lib/src/: generate-P2PKH-wallet.ts  import-wallet-with-mnemonic.ts  sign-verify.ts
blockchain/: package-lock.json  package.json
contract/: package-lock.json  package.json
contract/noah-token/: .env.example  package-lock.json  truffle-config.js
contract/utils/: deploy.js
docs/: awesome.md
docs/airdrop/: qna3.md
ethereum/frontend/: tsconfig.json
frontend/: .env.example  examples.json  next.config.js  package-lock.json  package.json
frontend/abi/: Airdrop.json  Faucet.json  IERC721.json  NoahNFT.json  NoahToken.json
frontend/components/: Profile.tsx
frontend/errors/: creator.ts  faucet.ts  index.ts  minter-request.ts  type.d.ts  upload.ts
frontend/libs/: image-url.ts  wagmi.ts
frontend/pages/: _app.tsx  _document.tsx  airdrop.tsx  faucet-with-backend.tsx  faucet.tsx  faucet2.tsx  index.tsx  noah-nft.tsx  noah-token.tsx  sample-wallet.tsx  wallet-generator.tsx  wallet-genuine-number-generator.tsx
frontend/prisma/: schema.prisma
frontend/scripts/: initialAdmin.ts
frontend/styles/: globals.css
mock/: README.md
mock/airdrop/: addresses.txt  addresses.xlsx
script/particle-network/: README.md
solana-pyth-price-feeds/: .gitignore
solana-pyth-price-feeds/app/: README.md  tailwind.config.ts
solana-pyth-price-feeds/program/: Cargo.toml
ton/wallet/: balance.ts  create.ts  import.ts  transfer.ts
(+101 files in other folders)
